# RAVE

./: .gitignore  README.md  cli.py  imgui.ini  pyproject.toml  rave.db  test.db  test.raveproj
.github/workflows/: build-installers.yaml  release_rave.yaml
rave/: app.py  audio_config_window.py  audio_device.py  audio_source.py  live_control_window.py  project.py  project_overview_window.py  rave_state.py  scripting_window.py  shader_viewer.py  tool_window.py  utils.py
rave/database/: database.py
rave/database/models/: product.py  purchase.py  user.py
rave/ui/: about_window.py  audio_config_tab.py  editor_tab.py  editor_window.py  live_control_tab.py  login_window.py  scripting_editor_tab.py  shader_viewer.py  window.py
tests/: test_database.py
