[tool.poetry]
name = "rave"
version = "0.1.0"
description = ""
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moderngl = "^5.10.0"
moderngl-window = "^2.4.6"
imgui = {extras = ["pyglet"], version = "^2.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
