[tool.poetry]
name = "RAVE: Real-time Audio Visualization Editor"
version = "0.1.0"
description = "A simple-to-use, real-time audio visualization editor, with GLSL scripting support, automatic visual parameter binding, and loopback driver support."
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moderngl = "^5.10.0"
moderngl-window = "^2.4.6"
imgui = {extras = ["pyglet"], version = "^2.0.0"}
pyaudiowpatch = "^0.2.12.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
